--- a/Backup/MainWindow.xaml
+++ b/Backup/MainWindow.xaml
@@ -4,16 +4,27 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Backup"
-        mc:Ignorable="d" Height="450" Width="800" Background="#FF484848" Title="Backup">
+        mc:Ignorable="d" Height="450" Width="800" Background="#FF484848" Title="Backup" ResizeMode="CanMinimize">
     <Grid>
-        <Button x:Name="BackupButton" Content="Start Backup" HorizontalAlignment="Center" Margin="0,315,0,0" VerticalAlignment="Top" Height="75" Width="162"/>
-        <TextBlock HorizontalAlignment="Left" Margin="74,62,0,0" TextWrapping="Wrap" Text="Select Backup Path:" VerticalAlignment="Top" Foreground="White" Height="27" Width="120"/>
-        <ProgressBar x:Name="BackupProgressBar" HorizontalAlignment="Center" Height="10" Margin="0,395,0,0" VerticalAlignment="Top" Width="100"/>
-        <ListBox x:Name="PathsList" d:ItemsSource="{d:SampleData ItemCount=5}" Width="200" Margin="600,0,0,0" Background="#FF2D2D2D" Grid.ColumnSpan="2"/>
-        <Button Content="Add" HorizontalAlignment="Left" Margin="600,375,0,0" VerticalAlignment="Top" Height="59" Width="68"/>
-        <Button Content="Open" HorizontalAlignment="Left" Margin="736,375,0,0" VerticalAlignment="Top" Height="59" Width="64"/>
-        <Button Content="Remove" HorizontalAlignment="Left" Margin="668,375,0,0" VerticalAlignment="Top" Height="59" Width="68"/>
-        <Button Content="Select" HorizontalAlignment="Left" Margin="74,136,0,0" VerticalAlignment="Top" Width="60" Click="SelectNewBackupPath"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="0*"/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <ListView x:Name="PathsList" Grid.ColumnSpan="2" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="220,0,0,0" Background="#FF373737" SelectionChanged="ListSelctionChange" Foreground="White">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn Header="Path" Width="480" DisplayMemberBinding="{Binding Path}"/>
+                    <GridViewColumn Header="Status" Width="100" DisplayMemberBinding="{Binding Status}"/>
+                </GridView>
+            </ListView.View>
+        </ListView>
+
+        <Button Content="Add" Margin="221,0,0,0" Click="AddPathClick" Height="58" VerticalAlignment="Bottom" Grid.ColumnSpan="2" HorizontalAlignment="Left" Width="193"/>
+        <Button x:Name="OpenButton" Content="Open" Margin="606,0,0,0" Height="58" VerticalAlignment="Bottom" Click="OpenPathClick" IsEnabled="False" Grid.ColumnSpan="2" HorizontalAlignment="Left" Width="193"/>
+        <Button x:Name="RmButton" Content="Remove" Margin="414,0,0,0" Click="RemovePathClick" Height="58" VerticalAlignment="Bottom" IsEnabled="False" Grid.ColumnSpan="2" HorizontalAlignment="Left" Width="192"/>
+        <Button Content="Select" HorizontalAlignment="Left" Margin="30,123,0,0" VerticalAlignment="Top" Width="159" Click="SelectNewBackupPath" Grid.ColumnSpan="2"/>
+        <TextBlock x:Name="SelectedPathBox" HorizontalAlignment="Left" Margin="30,55,0,0" TextWrapping="Wrap" Text="Selected Backup Path:" VerticalAlignment="Top" Foreground="White" Width="159" Grid.ColumnSpan="2"/>
+        <Button x:Name="BackupButton" HorizontalAlignment="Left" Margin="10,0,0,10" Width="210" Click="StartBackupClick" Background="#FF06B025" Grid.ColumnSpan="2" Height="48" VerticalAlignment="Bottom" Content="Start Backup"/>
 
     </Grid>
 </Window>
